# battery_rul

./: .gitignore  README.md  pyproject.toml
.github/agents/: battery-rul-thesis.agent.md
data/: README.md
docs/: 20260114开题报告.docx  experiment_log.md  project_structure.md  reproduction_plan.md  ~$业论文思密达.docx  毕业论文.docx  毕业论文思密达.docx  流程图.pptx
experiments/: README.md
models/: README.md
notebooks/: 01_data_exploration.ipynb  02_Baseline_and_Feature_Engineering.ipynb  03_lstm_experiment.ipynb  04_system_blueprint.ipynb  05_protocol_aware_model_training.ipynb  06_lstm_training_baseline.ipynb  13_feature.ipynb  14_lstm.ipynb  README.md
record/: 01_data_exploration.ipynb  02_Baseline_and_Feature_Engineering.ipynb  03_lstm_experiment.ipynb  06_lstm_training_baseline.ipynb  07_transformer_three_protocol_experiment.ipynb  08_chapter3_eda.ipynb  09_data_cleaning_preprocessing_strategy.ipynb  11_data_cleaning_kickoff.ipynb  12_data_pre.ipynb
references/: README.md  formulas.md  pi_tnet_notes.md
results/: README.md
scripts/: README.md  audit_nasa_data.py  build_nasa_features.py  calibrate_physics_loss.py  compare_data_vs_best_physics.py  compare_pi_tnet_runs.py  plot_data_vs_physics_comparison.py  plot_physics_loss_ablation.py  plot_prediction_curves.py  run_physics_loss_ablation.py  summarize_best_physics_runs.py  summarize_physics_loss_ablation.py  summarize_pi_tnet_runs.py  train_pi_tnet.py  verify_nasa_dataloader.py  verify_pi_tnet_model.py
src/: BatteryLSTM.py
utils/: BatteryDataModule.py  data_loader.py  dataset_builder.py  test_and_plot.py
(+172 files in other folders)
